-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
QE 2021-10-04, QE 2021-10-18, QE 2021-11-01, QE 2021-11-15, QE 2021-11-29
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/db/exec/bucket_unpacker.h:149: UNINIT_CTOR 120725 The compiler-generated constructor for this class does not initialize "_unpackerBehavior".
/src/mongo/db/exec/bucket_unpacker.h:156: UNINIT_CTOR 120725 The compiler-generated constructor for this class does not initialize "_includeTimeField".
/src/mongo/db/exec/bucket_unpacker.h:159: UNINIT_CTOR 120725 The compiler-generated constructor for this class does not initialize "_includeMetaField".