SERVER-59897 Fix uninitialized scalar field in BucketUnpacker